# slinoss-lm

./: .env.example  .gitignore  AGENTS.md  README.md  eval_ppl.py  eval_zero_shot.py  pyproject.toml  requirements-eval.txt  requirements-wandb.txt  requirements.txt  train.py
configs/baselines/: mamba3-siso-180m.yaml
configs/eval/: zero-shot.yaml
configs/experiments/: fwedu-180m.yaml  fwedu-1p5b.yaml  fwedu-440m.yaml  fwedu-880m.yaml
configs/runtime/: ada.yaml  ampere.yaml
scripts/: README.md  guix-run  manifest.scm  remote-list  remote-print-config  remote-rsync  remote-shell  remote-smoke  remotectl.py
src/slinoss_lm/: __init__.py  checkpoint.py  common.py  config.py  configuration_slinoss_lm.py  data.py  eval_ppl.py  eval_zero_shot.py  inspect.py  modeling_slinoss_lm.py  train.py  wandb_integration.py
src/slinoss_lm/baselines/: __init__.py
src/slinoss_lm/baselines/mamba3/: __init__.py  config.py  model.py  train.py
tests/: test_config_and_model.py  test_data_and_checkpoint.py  test_experiment_protocol.py  test_mamba3_baseline.py  test_remote_scripts.py  test_train_runtime_controls.py  test_train_smoke.py  test_wandb_integration.py
