[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slinoss-lm"
version = "0.1.0"
description = "Single-node SLinOSS language-model training harness for FineWeb-Edu."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ayan Das" }]
dependencies = [
  "numpy>=1.26,<3",
  "packaging>=24,<26",
  "PyYAML>=6,<7",
  "safetensors>=0.5,<1",
  "slinoss[cuda] @ https://github.com/b-vitamins/slinoss/releases/download/v0.5.2/slinoss-0.5.2-cp311-cp311-linux_x86_64.whl#sha256=1d8a9dac6563dedadf4d235ecbc49a219ae5cbdd25c3b69d9539722e0e3ed86a",
  "tokenizers>=0.22,<0.23",
  "torch==2.10.0",
  "tqdm>=4.66,<5",
  "transformers>=4.57,<4.58",
]

[project.optional-dependencies]
baselines = [
  "einops>=0.8,<0.9",
  "mamba-ssm @ git+https://github.com/state-spaces/mamba@bd6dc62a724e6d2f1c821a15b3b2cc02e2b810b4",
]
eval = [
  "lm_eval[hf]>=0.4,<0.5",
  "pyarrow>=21,<23",
]
wandb = [
  "wandb>=0.18,<1",
]
dev = [
  "pyright>=1.1.400",
  "pytest>=8",
  "ruff>=0.9.5",
]

[project.scripts]
slinoss-lm-train = "slinoss_lm.train:main"
slinoss-lm-baseline-mamba3-train = "slinoss_lm.baselines.mamba3.train:main"
slinoss-lm-inspect = "slinoss_lm.inspect:main"
slinoss-lm-eval-ppl = "slinoss_lm.eval_ppl:main"
slinoss-lm-eval-zero-shot = "slinoss_lm.eval_zero_shot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
exclude = [
  ".venv",
  "__pycache__",
]
